/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.3-rc-1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

repositories {
    mavenCentral()
}

shadowJar {
    archiveBaseName.set('GameLogic')
    archiveClassifier.set('all')
    archiveVersion.set('1.0')
}

dependencies {
    // lib folder
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    // lib maven
    implementation("com.lmax:disruptor:4.0.0")
    implementation("org.luaj:luaj-jse:3.0.1")
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation("io.reactivex.rxjava3:rxjava:3.1.8")

    // test
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'nro.server.DragonBall'
        )
    }
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

application {
    // Define the main class for the application.
    mainClass = 'nro.server.DragonBall'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview", "-Xlint:-preview"]
    options.encoding = 'UTF-8'
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.named('test') {
    useJUnitPlatform()
}

//tasks.processResources {
//    enabled = true
//}
